force-app/main/default/objects/Krow__Application__c/fields/Krow__Candidate__c.field-meta.xml
<CustomField>
    <fullName>Krow__Candidate__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Candidate</label>
    <referenceTo>Krow__Candidate__c</referenceTo>
    <relationshipLabel>Applications</relationshipLabel>
    <relationshipName>Applications</relationshipName>
    <type>Lookup</type>
</CustomField>