force-app/main/default/objects/Krow__Application__c/fields/Krow__Job_Order__c.field-meta.xml
<CustomField>
    <fullName>Krow__Job_Order__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Job Order</label>
    <referenceTo>Krow__Job_Order__c</referenceTo>
    <relationshipLabel>Applications</relationshipLabel>
    <relationshipName>Applications</relationshipName>
    <type>Lookup</type>
</CustomField>