force-app/main/default/objects/Krow__Application__c/fields/Krow__Location__c.field-meta.xml
<CustomField>
    <fullName>Krow__Location__c</fullName>
    <formula>Krow__Project_Resource__r.Krow__Location__r.Name</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Location</label>
    <type>Text</type>
</CustomField>