force-app/main/default/objects/Krow__Application__c/fields/Krow__Resource_Manager__c.field-meta.xml
<CustomField>
    <fullName>Krow__Resource_Manager__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Resource Manager</label>
    <referenceTo>User</referenceTo>
    <relationshipName>ApplicationsRM</relationshipName>
    <type>Lookup</type>
</CustomField>