force-app/main/default/objects/Krow__Application__c/fields/Krow__Resource_Request__c.field-meta.xml
<CustomField>
    <fullName>Krow__Resource_Request__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Resource Request</label>
    <referenceTo>Krow__Resource_Request__c</referenceTo>
    <relationshipLabel>Applications</relationshipLabel>
    <relationshipName>Applications</relationshipName>
    <type>Lookup</type>
</CustomField>