force-app/main/default/objects/Krow__Application__c/fields/Krow__Team__c.field-meta.xml
<CustomField>
    <fullName>Krow__Team__c</fullName>
    <formula>Krow__Project_Resource__r.Krow__Team__r.Name</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Team</label>
    <type>Text</type>
</CustomField>